# full-stack-streaming-mvp

./: Justfile  LICENSE  README.md  orchestrate.sh
app-stack/: FRONTEND_REBUILD_STEPS.md  README.md  docker-compose.yml
app-stack/backend/: Dockerfile  pyproject.toml  requirements.txt
app-stack/backend/src/: main.py  state.py
app-stack/backend/src/models/: flink.py  health.py  hits.py  sample.py
app-stack/backend/src/routers/: flink_cockpit.py  health.py  hits.py  sample.py  websocket.py
app-stack/backend/src/services/: db.py
app-stack/backend/tests/: test_main.py
app-stack/frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  playwright.config.js  vite.config.js
app-stack/frontend/coverage/: HitTable.vue.html  clover.xml  coverage-final.json  index.html
app-stack/frontend/src/: App.vue  style.css
app-stack/frontend/src/app/: layout.tsx  page.tsx
app-stack/frontend/src/components/: BaseTable.vue  HitTable.vue  MainLayout.vue  SampleBackendCall.vue
app-stack/frontend/test-results/: .last-run.json
app-stack/frontend/tests/: hits.spec.js
flink-stack/: Dockerfile  README.md  docker-compose.yml  flink-env.env  hot-reload.sh  init_postgres.sql  quick_start.sh  requirements.txt
flink-stack/src/: debug_job.py  health_check.py  mart_requests_job.py  staging_requests_job.py  test_data_generator.py
flink-stack/utils/: health_check.py  run_jobs.py  test_data_generator.py
kafka-stack/: README.md  docker-compose.yml
shared-services/: README.md  docker-compose.yml  init_postgres.sql
(+15 files in other folders)
